# cppproject_template

./: .clang-format  .gitignore  CMakeLists.txt  Dependencies.cmake
.devcontainer/: .dockerignore  Dockerfile  devcontainer.json
include/samplelib/: samplelib.hpp
src/: CMakeLists.txt
src/sampleapp/: CMakeLists.txt  main.cpp
src/samplelib/: CMakeLists.txt  samplelib.cpp
test/: CMakeLists.txt
test/samplelib/: CMakeLists.txt  samplelib_ut.cpp
